<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>lukfor</groupId>
	<artifactId>pgs-calc</artifactId>
	<version>1.5.1</version>
	<packaging>jar</packaging>

	<name>pgs-calc</name>
	<description>Applying polygenic scores (PGS) on imputed genotypes</description>
	<url>https://github.com/lukfor/pgs-calc</url>

	<licenses>
		<license>
			<name>MIT License</name>
			<url>http://www.opensource.org/licenses/mit-license.php</url>
		</license>
	</licenses>

	<scm>
		<url>https://github.com/lukfor/pgs-calc/tree/master</url>
		<connection>scm:git:https://github.com/lukfor/pgs-calc.git</connection>
		<developerConnection>scm:git:ssh://github.com:lukfor/pgs-calc.git</developerConnection>
	</scm>

	<distributionManagement>
		<repository>
			<id>jfrog-genepi-maven</id>
			<name>jfrog-genepi-maven</name>
			<url>https://genepi.jfrog.io/artifactory/maven/</url>
		</repository>
	</distributionManagement>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<repositories>
		<repository>
			<id>jfrog-genepi-maven</id>
			<name>jfrog-genepi-maven</name>
			<url>https://genepi.jfrog.io/artifactory/maven/</url>
		</repository>
	</repositories>


	<dependencies>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>genepi</groupId>
			<artifactId>genepi-io</artifactId>
			<version>1.2.0</version>
		</dependency>

		<dependency>
			<groupId>info.picocli</groupId>
			<artifactId>picocli</artifactId>
			<version>4.2.0</version>
		</dependency>

		<dependency>
			<groupId>com.github.samtools</groupId>
			<artifactId>htsjdk</artifactId>
			<version>2.21.3</version>
		</dependency>

		<dependency>
			<groupId>com.github.lukfor</groupId>
			<artifactId>magic-progress</artifactId>
			<version>0.3.2</version>
		</dependency>

		<dependency>
			<groupId>com.github.lukfor</groupId>
			<artifactId>magic-reports</artifactId>
			<version>0.0.1</version>
		</dependency>

	</dependencies>


	<build>
		<plugins>

			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>2.3</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<finalName>${project.artifactId}</finalName>
							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>genepi.riskscore.App</mainClass>
								</transformer>
							</transformers>
							<filters>
								<filter>
									<artifact>*:*</artifact>
									<excludes>
										<exclude>META-INF/*.SF</exclude>
										<exclude>META-INF/*.DSA</exclude>
										<exclude>META-INF/*.RSA</exclude>
									</excludes>
								</filter>
							</filters>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<!-- Build final directory structure and zip files -->

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.4</version>
				<executions>
					<execution>
						<id>create-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<appendAssemblyId>false</appendAssemblyId>
							<descriptors>
								<descriptor>src/main/assembly/assembly.xml</descriptor>
							</descriptors>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<!-- Code Coverage -->

			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.5</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>

</project>
